fix text not truncating in decks

--- a/client/src/styles/DecksPage.css
+++ b/client/src/styles/DecksPage.css
@@ -27,7 +27,6 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
-  overflow: hidden;
   margin-top: 50px;
 }
 
@@ -35,7 +34,6 @@
   padding: 10px;
   border: 1px solid black;
   background-color: var(--light);
-  color: var(--dark);
   border-radius: 5px;
   overflow: hidden;
 }
@@ -49,6 +47,7 @@
 /* overflow: hidden; is required on parent element for text truncation to work */
 /* see .deck */
 .deck .name, .deck .created-by, .deck .created-at {
+  color: var(--dark);
   overflow: hidden;
   white-space: nowrap; 
   text-overflow: ellipsis;
